--- a/frtlzr-info/bibliography.bib
+++ b/frtlzr-info/bibliography.bib
@@ -16,3 +16,12 @@
 	month = jan,
 	year = {2020}
 }
+
+@article{modak_haber_2011,
+	title = {Haber {Process} for {Ammonia} {Synthesis}},
+	language = {en},
+	author = {Modak, Jayant M},
+	year = {2011},
+	pages = {9},
+	file = {Modak - 2011 - Haber Process for Ammonia Synthesis.pdf:/home/roberto/Zotero/storage/HGXYMN9U/Modak - 2011 - Haber Process for Ammonia Synthesis.pdf:application/pdf}
+}
